fix faq visible collapse

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,6 +114,10 @@ input[type="checkbox"]:checked {
   object-fit: cover !important;
 }
 
+.collapse {
+  visibility: visible !important;
+}
+
 /* Media query for mobile devices */
 @media screen and (max-width: 700px) {
   .swal2-popup {
